# OpenVR-SpaceCalibrator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OpenVR-SpaceCalibrator.sln  Protocol.h  README.md  StaticConfig.h.in  Version.h  driverInstall.py
.github/ISSUE_TEMPLATE/: bug_report.md
OpenVR-SpaceCalibrator/: Calibration.cpp  Calibration.h  Configuration.cpp  Configuration.h  Configuration_linux.cpp  EmbeddedFiles.cpp  EmbeddedFiles.h  HandleCommandLine.h  HandleCommandLine_linux.cpp  HandleCommandLine_win.cpp  IPCClient.cpp  IPCClient.h  IPCClient_linux.cpp  OpenVR-SpaceCalibrator.cpp  OpenVR-SpaceCalibrator.h  OpenVR-SpaceCalibrator.rc  OpenVR-SpaceCalibrator.vcxproj  OpenVR-SpaceCalibrator.vcxproj.filters  OpenVR-SpaceCalibrator_linux.cpp  Resource.h  UserInterface.cpp  UserInterface.h  main_linux.cpp  main_win.cpp  makefile  manifest.vrmanifest  stdafx.cpp  stdafx.h  targetver.h
OpenVR-SpaceCalibratorDriver/: Comms.h  Hooking.cpp  Hooking.h  IPCServer.cpp  IPCServer.h  IPCServer_linux.cpp  IPCServer_win.cpp  InterfaceHookInjector.cpp  InterfaceHookInjector.h  Logging.cpp  Logging.h  OpenVR-SpaceCalibratorDriver.cpp  OpenVR-SpaceCalibratorDriver.h  OpenVR-SpaceCalibratorDriver.vcxproj  OpenVR-SpaceCalibratorDriver.vcxproj.filters  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.h  VRWatchdogProvider.h  build.sh  compat.cpp  compat.h  dllmain.cpp
OpenVR-SpaceCalibratorDriver/000spacecalibrator/: driver.vrdrivermanifest
OpenVR-SpaceCalibratorDriver/000spacecalibrator/resources/settings/: default.vrsettings
OpenVR-SpaceCalibratorDriver/01spacecalibrator/: driver.vrdrivermanifest
OpenVR-SpaceCalibratorDriver/01spacecalibrator/resources/settings/: default.vrsettings
install/: installer.nsi
lib/MinHook/lib/: libMinHook-x64-v141-md.lib  libMinHook.x64.lib
lib/imgui/: imgui.cpp  imgui.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp
lib/lib_vrinputemulator/: ipc_protocol.h  vrinputemulator.cpp  vrinputemulator.h  vrinputemulator_types.h
